[project]
name = "modal-sprite"
version = "0.1.0"
description = "Persistent, durable disposable cloud computers on Modal"
readme = "README.md"
authors = [
    { name = "HP2706", email = "hprjdk@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "modal>=1.2.1",
    "pydantic>=2.12.0",
    "typer>=0.9.0",
]

[project.scripts]
modal-sprite = "modal_sprite.cli:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PIE", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["integration: requires Modal"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
